adjust header border radius

--- a/css/main.less
+++ b/css/main.less
@@ -379,6 +379,7 @@ button {
 								border-color: #f0f0f0;
 								position: relative;
 								z-index: 2;
+								.border-radius(0);
 								&.current-menu-item {
 									color: #fff;
 								}
