--- a/css/main.less
+++ b/css/main.less
@@ -165,10 +165,12 @@ body {
 
 .button,
 a.button,
-button {
+button,
+input[type=submit] {
 	padding: 10px;
 	font-size: 10px;
 	line-height: 10px;
+	background: #333;
 	.gradient(#333, #333, #444);
 	color: #f0f0f0;
 	text-decoration: none;
@@ -180,8 +182,32 @@ button {
 	display: block;
 	float: left;
 	cursor: pointer;
+	&:hover {
+		.gradient(#3f3f3f, #3f3f3f, #4f4f4f);
+	}
+	&:active {
+		.gradient(#333, #333, #222);
+	}
+	&.secondary {
+		color: #333;
+		text-shadow: 0 0 0;
+		.gradient(#bbb, #bbb, #ccc);
+		border-color: #bbb;
+		&:hover {
+			.gradient(#bfbfbf, #bfbfbf, #cfcfcf);
+		}
+		&:active {
+			.gradient(#bbb, #bbb, #aaa);
+		}
+	}
 	&.remove {
-		.gradient(darken(@escultura, 25%), darken(@escultura, 25%), darken(@escultura, 15%));
+		.gradient(darken(#f32419, 25%), darken(#f32419, 25%), darken(#f32419, 15%));
+		&:hover {
+			.gradient(darken(#f32419, 20%), darken(#f32419, 20%), darken(#f32419, 10%));
+		}
+		&:active {
+			.gradient(darken(#f32419, 25%), darken(#f32419, 25%), darken(#f32419, 30%));
+		}
 	}
 }
 
@@ -371,8 +397,9 @@ button {
 							margin-left: 5px;
 						}
 						&:hover {
-							> a {
-								color: #333;
+							> a,
+							.current-menu-item {
+								color: #333 !important;
 								.gradient(#f0f0f0, #f0f0f0, #ccc);
 								.box-shadow(0 0 0);
 								text-shadow: 0 0 0;
@@ -1250,6 +1277,11 @@ body {
 		}
 		form {
 			width: 100%;
+			.form-section {
+				margin: 0 0 20px;
+				padding: 10px 20px;
+				background: #fefefe;
+			}
 			input.title {
 				display: block;
 				width: 100%;
@@ -1270,24 +1302,9 @@ body {
 			}
 			input[type=submit],
 			.close {
-				border: 0;
-				.gradient(#ccc, #ccc, #ddd);
 				padding: 12px;
-				margin: 0;
-				text-decoration: none;
-				font-weight: 200;
 				font-size: 12px;
-				color: #333;
-				font-family: "Open Sans";
-				display: inline;
-			}
-			input[type=submit] {
-				font-weight: 800;
-				cursor: pointer;
-				.gradient(#333, #333, #444);
-				color: #f0f0f0;
-				.box-shadow(inset 0 0 3px rgba(255,255,255,0.15));
-				text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+				margin: 0 5px 0 0;
 			}
 		}
 	}
@@ -1362,6 +1379,69 @@ body {
 				label {
 					margin-left: 10px;
 					color: #333;
+				}
+			}
+		}
+	}
+	.loop-box {
+		.tip {
+			color: #999;
+			font-style: italic;
+			width: 70%;
+			float: left;
+			margin-right: 20px;
+		}
+		.new-button {
+			float: right;
+			margin-top: -20px;
+			width: 10%;
+		}
+		.box-inputs {
+			width: 100%;
+			clear: both;
+			margin: 20px 0;
+			li {
+				width: 100%:
+				clear: both;
+				display: block;
+				margin: 0 0 10px;
+				padding: 10px;
+				background: #f0f0f0;
+				height: 30px;
+				.main-input {
+					width: 65%;
+					input {
+						width: 100%;
+						margin: 0;
+						&.link-title,
+						&.image-title {
+							width: 30%;
+							margin-right: 10px;
+							float: left;
+						}
+						&.link-url,
+						&.image-file {
+							width: 65%;
+							float: left;
+						}
+						&.image-file {
+							margin: 4px;
+						}
+					}
+					float: left;
+				}
+				.featured {
+					width: 20%;
+					float: left;
+					.box-sizing(border-box);
+					padding: 5px 20px;
+					label {
+						display: inline;
+					}
+				}
+				.button.remove {
+					float: right;
+					.box-sizing(border-box);
 				}
 			}
 		}
