--- a/inc/artworks/css/admin.css
+++ b/inc/artworks/css/admin.css
@@ -1,24 +1,17 @@
-#artwork_videos_box .box-inputs,
-#artwork_links_box .box-inputs {
+.loop-box .box-inputs {
 	margin: 20px 0 10px;
 	clear: both;
 	display: block;
 }
 
-#artwork_videos_box ul li,
-#artwork_links_box ul li {
+.loop-box ul li {
 	width: 100%;
 	display: block;
 	margin: 0 0 10px;
 	clear: both;
 }
 
-#artwork_videos_box ul li p,
-#artwork_links_box ul li p {
+.loop-box ul li p {
 	float: left;
 	margin: 0 20px 0 0;
-}
-
-#artwork_videos_box ul li .button,
-#artwork_links_box ul li .button {
 }
