--- a/css/main.less
+++ b/css/main.less
@@ -599,6 +599,9 @@ input[type=submit] {
 .posts-section {
 	.posts-list {
 		color: #444;
+		a {
+			color: #333;
+		}
 		article {
 			min-height: 0;
 			.border-radius(0);
@@ -629,6 +632,9 @@ input[type=submit] {
 				h3 {
 					font-weight: 800;
 					font-size: 20px;
+					a {
+						color: #333;
+					}
 				}
 				p.meta {
 					span {
@@ -898,9 +904,6 @@ input[type=submit] {
 		.post-content {
 			margin: 0;
 		}
-	}
-	a {
-		color: #fff;
 	}
 }
 .sub-content {
@@ -1532,13 +1535,13 @@ body {
 	#geocode_box {
 		margin: 0 0 20px;
 		#geocode_address {
-			width: 90%;
+			width: 80%;
 			float: left;
 			padding: 11px;
 			margin: 0;
 		}
 		.button.geocode_address {
-			width: 10%;
+			width: 20%;
 			.box-sizing(border-box);
 			margin: 0;
 		}
