--- a/css/main.less
+++ b/css/main.less
@@ -102,6 +102,10 @@
   content: '\E007';
 }
 
+input,input[type=text],textarea {
+	.border-radius(0 0 0 0);
+}
+
 b {
 	font-weight: bold;
 }
@@ -875,15 +879,16 @@ input[type=submit] {
 		a {
 			width: 1%;
 			display: table-cell;
-			padding: 10px;
+			padding: 10px 5px;
 			background: #111;
 			color: #f0f0f0;
 			text-decoration: none;
 			text-transform: uppercase;
 			font-weight: 600;
 			text-align: center;
-			font-size: 11px;
+			font-size: 10px;
 			border-left: 1px solid #000;
+			vertical-align: middle;
 			&:hover {
 				background: #202020;
 			}
@@ -919,6 +924,7 @@ input[type=submit] {
 	.transition(right .2s ease-in-out);
 	.content {
 		padding: 20px;
+		color: #f0f0f0;
 		.sub-content-header {
 			h3 {
 				color: #fff;
@@ -937,6 +943,92 @@ input[type=submit] {
 		object,
 		img {
 			max-width: 100%;
+		}
+		.image-list {
+			display: block;
+			width: 100%;
+			margin: 0;
+			padding: 0;
+			li {
+				width: 25%;
+				float: left;
+				display: block;
+				margin: 0 0 10px;
+				padding: 0;
+				img {
+					width: 90%;
+					height: auto;
+				}
+			}
+		}
+		/*
+		 * Comments
+		 */
+		h3#comments {
+			color: #f0f0f0;
+			font-size: 16px;
+			line-height: 20px;
+			font-weight: bold;
+		}
+		ol.commentlist {
+			list-style: none;
+			margin: 0;
+			padding: 0;
+			clear: both;
+			li {
+				margin: 0 0 10px;
+				padding: 10px;
+				background: #f0f0f0;
+				color: #333;
+				a {
+					color: #333;
+				}
+				.vcard {
+					margin: 0;
+					padding: 0;
+					width: 100%;
+					img {
+						float: right;
+						display: block;
+						margin: 0;
+					}
+					.fn {
+						font-weight: 800;
+						font-size: 14px;
+					}
+				}
+				.comment-meta {
+					font-size: 90%;
+					color: #666;
+					margin-bottom: 10px;
+				a {
+					color: #666;
+				}
+				}
+				.reply {
+					display: none;
+				}
+			}
+		}
+		#respond {
+			clear:both;
+			h3 {
+				color: #f0f0f0;
+				font-size: 16px;
+				line-height: 20px;
+			}
+			textarea {
+				width: 100%;
+				.gradient(#f0f0f0, #f0f0f0, #e0e0e0);
+			}
+			input[type=text] {
+				margin: 0;
+				width: 100%;
+				.gradient(#f0f0f0, #f0f0f0, #e0e0e0);
+			}
+			label {
+				color: #666;
+			}
 		}
 	}
 }
