add default search

--- a/css/main.less
+++ b/css/main.less
@@ -901,6 +901,16 @@ input[type=submit] {
 			}
 		}
 	}
+	.post-data {
+		.dimensions {
+			float: left;
+			width: 40%;
+		}
+		.dates {
+			float: right;
+			width: 40%;
+		}
+	}
 	.post-content {
 		margin: 20px 20px 40px;
 	}
