--- a/css/main.less
+++ b/css/main.less
@@ -1584,8 +1584,13 @@ body {
 			.input-container {
 				display: table-cell;
 				vertical-align: middle;
-				text-align: center;
 				padding-right: 20px;
+				select {
+					width: 100%;
+				}
+				.chzn-container {
+					width: 100% !important;
+				}
 				input, 
 				label {
 					margin: 0;
@@ -1597,6 +1602,9 @@ body {
 				label {
 					margin-left: 10px;
 					color: #333;
+				}
+				&.currently-active {
+					text-align: center;
 				}
 			}
 		}
