--- a/css/main.less
+++ b/css/main.less
@@ -1070,7 +1070,7 @@ input[type=submit] {
 			.image-stage-container {
 				border: 5px solid #101010;
 				background: #101010;
-				height: 65%;
+				height: 60%;
 				overflow: hidden;
 				.image-stage {
 					width: 100%;
@@ -1093,13 +1093,13 @@ input[type=submit] {
 			.image-list-container {
 				display: block;
 				width: 100%;
-				margin: 10px 0 0;
-				padding: 0 0 10px;
+				margin: 2% 0 0;
+				padding: 0 0 2%;
 				height: 15%;
 				overflow-y: hidden;
 				overflow-x: auto;
 				&::-webkit-scrollbar {
-					height: 5px;
+					height: 5%;
 					background: #444;
 				}
 				&::-webkit-scrollbar-thumb {
