--- a/css/main.less
+++ b/css/main.less
@@ -858,9 +858,24 @@ input[type=submit] {
 			height: auto;
 			display: block;
 		}
+		.post-categories {
+			margin: 0 0 -20px;
+			padding: 20px 0 0 40px;
+			position: relative;
+			z-index: 2;
+			height: auto;
+			float: none;
+			li {
+				float: none;
+				a {
+					background: transparent;
+					padding: 0;
+					color: #999;
+				}
+			}
+		}
 		h1 {
 			color: #f0f0f0;
-			background: #444;
 			font-size: 32px;
 			line-height: 32px;
 			margin: 0;
@@ -960,6 +975,19 @@ input[type=submit] {
 		margin: 0 40px;
 		.post-content {
 			margin: 0;
+		}
+	}
+	&.single-post {
+		.actions {
+			padding: 20px 20px 0;
+			a {
+				color: #999;
+				text-decoration: none;
+				.lsf {
+					color: #666;
+				}
+				.button;
+			}
 		}
 	}
 }
