--- a/css/main.less
+++ b/css/main.less
@@ -874,6 +874,20 @@ input[type=submit] {
 				}
 			}
 		}
+		h2 {
+			float: none;
+			margin: 0;
+			color: #eee;
+			text-transform: uppercase;
+			font-size: 14px;
+			line-height: 16px;
+			font-weight: 800;
+			margin: 20px 0 -20px 40px;
+			a {
+				color: #eee;
+				text-decoration: none;
+			}
+		}
 		h1 {
 			color: #f0f0f0;
 			font-size: 32px;
