--- a/css/main.less
+++ b/css/main.less
@@ -882,7 +882,8 @@ input[type=submit] {
 			font-size: 14px;
 			line-height: 16px;
 			font-weight: 800;
-			margin: 20px 0 -20px 40px;
+			padding: 20px 0 0;
+			margin: 0 0 -20px 40px;
 			a {
 				color: #eee;
 				text-decoration: none;
