--- a/css/main.less
+++ b/css/main.less
@@ -119,7 +119,7 @@ body {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	background: #f0f0f0;
+	background-color: #f0f0f0;
 	font-size: 12px;
 	line-height: 18px;
 	&::-webkit-scrollbar {
@@ -134,8 +134,19 @@ body {
 	}
 }
 
+.loading-map,
+.displaying-map {
+	.transition(background-color 1s linear);
+	background-color: #1f1f1f;
+}
+
 .loading-map > * {
-	display: none;
+	opacity: 0;
+}
+
+.displaying-map > * {
+	.transition(opacity 1s ease-in-out);
+	opacity: 1;
 }
 
 .displaying-map {
@@ -1080,7 +1091,7 @@ input[type=submit] {
 						article {
 							.thumbnail-container {
 								img {
-									.transition(margin-top 20s);
+									.transition(margin-top 30s);
 									margin-top: -50%;
 								}
 							}
