--- a/css/main.less
+++ b/css/main.less
@@ -138,19 +138,16 @@ body {
 .displaying-map {
 	.transition(background-color 1s linear);
 	background-color: #1f1f1f;
+	overflow: hidden;
 }
 
 .loading-map > * {
+	.transition(opacity 1s linear);
 	opacity: 0;
 }
 
 .displaying-map > * {
-	.transition(opacity 1s ease-in-out);
 	opacity: 1;
-}
-
-.displaying-map {
-	overflow: hidden;
 }
 
 @top: 120px;
@@ -210,6 +207,15 @@ input[type=submit] {
 			.gradient(darken(#f32419, 25%), darken(#f32419, 25%), darken(#f32419, 30%));
 		}
 	}
+}
+
+.loading-map #masthead {
+	.transform(translate(0px, -@top));
+}
+
+.displaying-map #masthead {
+	.transition(all .8s ease-in-out);
+	.transform(translate(0,0));
 }
 
 #masthead,
@@ -711,7 +717,6 @@ input[type=submit] {
 			width: 100%;
 			height: 100%;
 			position: relative;
-			border: 1px solid #303030;
 			background: #0f0f0f;
 			overflow: hidden;
 			margin: 0;
@@ -731,6 +736,9 @@ input[type=submit] {
 					z-index: 2;
 					article {
 						.post-header {
+							.category {
+								margin-left: 0;
+							}
 							h3 {
 								margin-left: 0;
 							}
@@ -757,6 +765,8 @@ input[type=submit] {
 						.category {
 							float: none;
 							font-weight: 200;
+							margin-left: 50px;
+							.transition(all 1.5s ease-in-out);
 							a {
 								color: #fff;
 								text-shadow: 1px 1px 0px rgba(0,0,0,0.8);
@@ -784,7 +794,7 @@ input[type=submit] {
 				opacity: 0;
 				position: absolute;
 				top: 50%;
-				margin-top: -20px;
+				margin-top: -40px;
 				font-size: 10px;
 				z-index: 5;
 				text-decoration: none;
@@ -792,14 +802,16 @@ input[type=submit] {
 					font-size: 30px;
 					line-height: 30px;
 					color: #fff;
-					text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
+					text-shadow: 2px 2px 2px rgba(0,0,0,0.8);
 					display: block;
+					padding: 20px;
+					margin: 0;
 				}
 				&.next {
-					right: 10px;
+					right: 0px;
 				}
 				&.prev {
-					left: 10px;
+					left: 0px;
 				}
 			}
 		}
@@ -873,7 +885,7 @@ input[type=submit] {
 	top: @top;
 	bottom: @bottom;
 	right: 0;
-	padding: 0;
+	padding: 40px 0 0 0;
 	overflow: auto;
 	overflow-x: hidden;
 	.box-sizing(border-box);
@@ -881,7 +893,7 @@ input[type=submit] {
 	z-index: 100;
 	.transition(right .2s ease-in-out);
 	.content-message {
-		margin: 20px 40px;
+		margin: 0 40px 20px;
 		background: #f0f0f0;
 		color: #333;
 		padding: 10px;
@@ -910,11 +922,25 @@ input[type=submit] {
 			padding-bottom: 5px;
 			border-bottom: 1px dotted #555;
 		}
+		&.featured {
+			margin: 0;
+			padding: 0;
+			h2 {
+				margin: 0;
+				font-size: 14px;
+				line-height: 14px;
+				text-transform: uppercase;
+				font-weight: 200;
+				padding: 15px 20px;
+				background: #0f0f0f;
+				border: 0;
+			}
+		}
 	}
 	.single-post-header {
 		background: transparent;
 		padding: 0;
-		margin: 0;
+		margin: -40px 0 0;
 		z-index: 200;
 		background: #444;
 		img {
@@ -1053,7 +1079,8 @@ input[type=submit] {
 	}
 	.featured-section {
 		.box-shadow(0 0 10px #0f0f0f);
-		margin-bottom: 20px;
+		margin-top: -40px;
+		margin-bottom: 40px;
 		position: relative;
 		.section-title {
 			margin: 0;
